@@ -37,7 +37,6 @@ allprojects {
     tasks.withType(JavaCompile) {
         sourceCompatibility = '21'
         targetCompatibility = '21'
-        options.compilerArgs << "-proc:full"
     }
 }
 
@@ -89,7 +88,9 @@ dependencies {
             "org.junit.jupiter:junit-jupiter",
             "org.assertj:assertj-core:4.0.0-M1",
             "org.mockito:mockito-core:5.18.0",
-            "org.mockito:mockito-junit-jupiter:5.18.0")
+            "org.mockito:mockito-junit-jupiter:5.18.0",
+            "com.salesforce.kafka.test:kafka-junit5:3.2.5",
+            "org.awaitility:awaitility:4.3.0")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
 }
